# diorama

./: .gitignore  CMakeLists.txt  Makefile  README.md  calc++-driver.cpp  calc++-driver.hpp  calc++-lexer.ll  calc++-parser.yy  calc++.cpp  diorama_driver.cpp  diorama_driver.hpp  diorama_lexer.ll  diorama_parser.yy  grammar  tb
misc/: test
notes/: language_design_skratch  links  longterm_plan.txt  misc.txt  requirementsLangNotes.txt  scratch.txt  temp_language_targets
src/: CMakeLists.txt  aux.cpp  aux.hpp  diorama_driver.cpp  diorama_driver.hpp  diorama_lexer.ll  diorama_parser.yy  hash_info.hpp  lexer.cpp  log.hpp  main.cpp  parser.cpp  parser.hpp  result.hpp
